--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-select/ng-select": "^12.0.4",
     "@ngrx/store": "^16.3.0",
+    "@tsparticles/angular": "^3.0.0",
+    "@tsparticles/engine": "^3.0.3",
+    "@tsparticles/slim": "^3.0.3",
+    "ng-particles": "^3.12.0",
+    "ngx-toastr": "^18.0.0",
     "openai": "^4.20.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tsparticles": "^3.0.3",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
